# CloudViewer

./: .gitignore  AboutWin.cpp  AboutWin.ui  CMakeLists.txt  CloudViewer.vcxproj  CloudViewer.vcxproj.filters  GBK.h  MyCloud.cpp  MyCloud.h  README.md  Tools.cpp  Tools.h  cloudviewer.cpp  cloudviewer.h  cloudviewer.qrc  cloudviewer.ui  main.cpp  mymesh.vtk
GeneratedFiles/: qrc_cloudviewer.cpp  ui_AboutWin.h  ui_cloudviewer.h
GeneratedFiles/Debug/: moc_cloudviewer.cpp
GeneratedFiles/Release/: moc_AboutWin.cpp  moc_cloudviewer.cpp
Resources/qss/: Windows.qss
doc/: cloudviewer-detail-zh.md  compiling-cloudviewer-linux.md  compiling-cloudviewer-windows.md
src/: AboutWin.cpp  AboutWin.h  AboutWin.ui  CMakeLists.txt  CloudViewer.cpp  CloudViewer.h  CloudViewer.ui  FileIO.cpp  FileIO.h  GBK.h  MeshProcessing.cpp  MeshProcessing.h  MyCloud.cpp  MyCloud.h  Tools.cpp  Tools.h  main.cpp
src/Resources/clouds/: rabbit.pcd  table.pcd
src/Resources/qss/: Darcula.qss  Windows.qss
x64/Debug/CloudViewer.tlog/: CL.read.1.tlog  CL.write.1.tlog  CloudViewer.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
x64/Release/CloudViewer.tlog/: CL.read.1.tlog  CL.write.1.tlog  CloudViewer.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
